--- a/README.rdoc
+++ b/README.rdoc
@@ -1,28 +1,40 @@
-== README
+# Members-Only
+Flight-Tracker is a Rails project that is part of The Odin Project's Rails curriculum. The assignment can be found [here](https://www.theodinproject.com/courses/ruby-on-rails/lessons/building-advanced-forms). The project is meant to showcase the use of Rails associations and nested forms to build a simple flight booking application.
 
-This README would normally document whatever steps are necessary to get the
-application up and running.
+## Getting Started
+N/A
 
-Things you may want to cover:
+### Prerequisites
+N/A
 
-* Ruby version
+### Installing
+N/A
 
-* System dependencies
+## Running the tests
+TO-DO
 
-* Configuration
+## Deployment
+TO-DO
 
-* Database creation
+## Built With
+* [Ruby on Rails](http://rubyonrails.org/) - Web framework
 
-* Database initialization
+## Contributing
+1. Fork it!
+2. Create your feature branch: `git checkout -b my-new-feature`
+3. Commit your changes: `git commit -am 'Add some feature'`
+4. Push to the branch: `git push origin my-new-feature`
+5. Submit a pull request :D
 
-* How to run the test suite
+## Versioning
+* Ruby 2.4.1
+* Rails 5.0.2
 
-* Services (job queues, cache servers, search engines, etc.)
+## Authors
+* LPSV
 
-* Deployment instructions
+## License
+N/A
 
-* ...
-
-
-Please feel free to use a different markup language if you do not plan to run
-<tt>rake doc:app</tt>.
+## Acknowledgments
+* The Odin Project
